feat: Correction question 3.3
