# src/controllers/book.controller.ts
@@ -1,4 +1,4 @@
-import { Controller, Get, Path, Route, Tags } from "tsoa";
+import { Body, Controller, Get, Path, Post, Route, Tags } from "tsoa";
 import { BookDTO } from "../dto/book.dto";
 import { bookService } from "../services/book.service";
 
@@ -13,5 +13,15 @@ export class BookController extends Controller {
   @Get("{id}")
   public async getBook(@Path("id") id: number): Promise<BookDTO> {
     return await bookService.getBookById(id);
+  }
+
+  @Post("/")
+  public async postBooks(@Body() requestBody: BookDTO): Promise<BookDTO> {
+    return bookService.createBook(
+      requestBody.title,
+      requestBody.publish_year,
+      requestBody.author?.id!,
+      requestBody.isbn,
+    );
   }
 }
